# GenCast-Distilled

./: .gitignore  README.md  pyproject.toml  requirements.txt
evaluation/: eval.ipynb  eval_helpers.py  inference_helpers.py  plotting_helpers.py
gencast_distillation/: config.py  get_data.py  losses.py  model.py  patched_gencast.py  run_train.py  training.py  utils.py
misc/: activate_vm.sh  delete_vm.sh
patches/: dpm_solver_plus_plus_2s.py
